# ensai-2024

./: Jour 1.ipynb  Jour 4.ipynb
.github/workflows/: deploy_prenoms.yml  main.yml
energy/dags/: extract_and_load_energy_data.py  transform.py
energy/dags/schema/: consumption.json  prices.json  production.json
energy/dags/sql/: test.sql
prenoms/: Dockerfile  api.py  pyproject.toml
pulumi/: Pulumi.local.yaml  Pulumi.yaml  __main__.py
terraform/: main.tf
terraform/functions/weather/: main.py  requirements.txt
